@@ -9,6 +9,10 @@ New in 1.9a:
   - The rebuild rules for distributed Yacc and Lex output will avoid
     overwriting existing files if AM_MAINTAINER_MODE and maintainer-mode
     is not enabled.
+
+  - Preprocessed assembler (*.S) compilation now honnor CPPFLAGS,
+    AM_CPPFLAGS and per-target _CPPFLAGS, unlike non-preprocessed
+    assembler (*.s).
 
 New in 1.9:
 
