@@ -1,3 +1,11 @@
+2004-10-10  Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* automake.in (Languages): Split .s (asm) and .S (cppasm) into
+	separate languages.  Make cppasm (Preprocessed Assembler) aware
+	of CPPFLAGS, AM_CPPFLAGS.
+	(handle_languages): Fix typo.
+	(lang_cppasm_rewrite): New function.
+
 2004-09-29  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* tests/subobj9.test: Adjust regexes after previous patch.
